Add RTL language support to all activities and fragments

--- a/briar-android/src/main/res/drawable/qr_code_explanation.xml
+++ b/briar-android/src/main/res/drawable/qr_code_explanation.xml
@@ -2,6 +2,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
         android:width="400dp"
         android:height="100dp"
+        android:autoMirrored="true"
         android:viewportHeight="49.5"
         android:viewportWidth="194.8">
 	<path
