--- a/briar-android/src/main/res/layout/activity_change_password.xml
+++ b/briar-android/src/main/res/layout/activity_change_password.xml
@@ -7,7 +7,7 @@
 	android:layout_height="match_parent"
 	tools:context=".android.login.ChangePasswordActivity">
 
-	<RelativeLayout
+	<android.support.constraint.ConstraintLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:orientation="vertical"
@@ -16,16 +16,19 @@
 		android:paddingLeft="@dimen/margin_activity_horizontal"
 		android:paddingRight="@dimen/margin_activity_horizontal"
 		android:paddingStart="@dimen/margin_activity_horizontal"
-		android:paddingTop="@dimen/margin_activity_vertical">
+		android:paddingTop="@dimen/margin_activity_vertical"
+		android:id="@+id/relativeLayout2">
 
 		<android.support.design.widget.TextInputLayout
 			android:id="@+id/current_password_entry_wrapper"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_centerHorizontal="true"
 			app:errorEnabled="true"
 			app:hintEnabled="false"
-			app:passwordToggleEnabled="true">
+			app:passwordToggleEnabled="true"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent">
 
 			<EditText
 				android:id="@+id/current_password_entry"
@@ -40,11 +43,12 @@
 			android:id="@+id/new_password_entry_wrapper"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_below="@id/current_password_entry_wrapper"
-			android:layout_centerHorizontal="true"
 			app:errorEnabled="true"
 			app:hintEnabled="false"
-			app:passwordToggleEnabled="true">
+			app:passwordToggleEnabled="true"
+			app:layout_constraintTop_toBottomOf="@id/current_password_entry_wrapper"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent">
 
 			<EditText
 				android:id="@+id/new_password_entry"
@@ -59,11 +63,12 @@
 			android:id="@+id/new_password_confirm_wrapper"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_below="@id/new_password_entry_wrapper"
-			android:layout_centerHorizontal="true"
 			app:errorEnabled="true"
 			app:hintEnabled="false"
-			app:passwordToggleEnabled="true">
+			app:passwordToggleEnabled="true"
+			app:layout_constraintTop_toBottomOf="@id/new_password_entry_wrapper"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent">
 
 			<EditText
 				android:id="@+id/new_password_confirm"
@@ -79,30 +84,33 @@
 			android:id="@+id/strength_meter"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_below="@id/new_password_confirm_wrapper"
-			android:layout_centerHorizontal="true"
-			android:visibility="invisible"/>
+			android:visibility="invisible"
+			app:layout_constraintTop_toBottomOf="@id/new_password_confirm_wrapper"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent"/>
 
 		<Button
 			android:id="@+id/change_password"
 			style="@style/BriarButton"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_below="@id/strength_meter"
-			android:layout_centerHorizontal="true"
 			android:layout_marginTop="@dimen/margin_medium"
 			android:enabled="false"
 			android:text="@string/change_password"
-			tools:enabled="true"/>
+			tools:enabled="true"
+			app:layout_constraintTop_toBottomOf="@id/strength_meter"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent"/>
 
 		<ProgressBar
 			android:id="@+id/progress_wheel"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_alignTop="@id/change_password"
-			android:layout_centerHorizontal="true"
-			android:visibility="invisible"/>
+			android:visibility="invisible"
+			app:layout_constraintTop_toTopOf="@id/change_password"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent"/>
 
-	</RelativeLayout>
+	</android.support.constraint.ConstraintLayout>
 
 </ScrollView>
