--- a/briar-android/src/main/res/layout/activity_password.xml
+++ b/briar-android/src/main/res/layout/activity_password.xml
@@ -5,24 +5,20 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
-	<RelativeLayout
+	<android.support.constraint.ConstraintLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:orientation="vertical"
-		android:paddingBottom="@dimen/margin_activity_vertical"
-		android:paddingEnd="@dimen/margin_activity_horizontal"
-		android:paddingLeft="@dimen/margin_activity_horizontal"
-		android:paddingRight="@dimen/margin_activity_horizontal"
-		android:paddingStart="@dimen/margin_activity_horizontal"
-		android:paddingTop="@dimen/margin_activity_vertical">
+		android:padding="@dimen/margin_activity_vertical">
 
 		<android.support.design.widget.TextInputLayout
 			android:id="@+id/password_layout"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_centerHorizontal="true"
 			app:errorEnabled="true"
 			app:hintEnabled="false"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
 			app:passwordToggleEnabled="true">
 
 			<EditText
@@ -40,31 +36,36 @@
 			style="@style/BriarButton"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_below="@id/password_layout"
 			android:layout_marginTop="@dimen/margin_medium"
 			android:onClick="onSignInClick"
-			android:text="@string/sign_in_button"/>
+			android:text="@string/sign_in_button"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/password_layout"/>
 
 		<ProgressBar
 			android:id="@+id/progress_wheel"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_alignTop="@id/btn_sign_in"
-			android:layout_centerHorizontal="true"
-			android:visibility="invisible"/>
+			android:visibility="invisible"
+			app:layout_constraintBottom_toBottomOf="@+id/btn_sign_in"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintTop_toTopOf="@id/btn_sign_in"/>
 
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_below="@id/btn_sign_in"
-			android:layout_centerHorizontal="true"
 			android:layout_marginTop="@dimen/margin_large"
 			android:clickable="true"
 			android:focusable="true"
 			android:onClick="onForgottenPasswordClick"
 			android:text="@string/forgotten_password"
-			android:textColor="?android:attr/textColorLink"/>
+			android:textColor="?android:attr/textColorLink"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/btn_sign_in"/>
 
-	</RelativeLayout>
+	</android.support.constraint.ConstraintLayout>
 
 </ScrollView>
