--- a/briar-android/src/main/res/layout/dialog_screen_filter.xml
+++ b/briar-android/src/main/res/layout/dialog_screen_filter.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:padding="@dimen/margin_large">
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical"
+	android:padding="@dimen/margin_large">
 
 	<ScrollView
 		android:layout_width="wrap_content"
@@ -13,7 +15,8 @@
 		<TextView
 			android:id="@+id/screen_filter_message"
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content"/>
+			android:layout_height="wrap_content"
+			tools:text="@string/screen_filter_body"/>
 
 	</ScrollView>
 
@@ -21,8 +24,8 @@
 		android:id="@+id/screen_filter_checkbox"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_weight="0"
 		android:layout_marginTop="@dimen/margin_large"
+		android:layout_weight="0"
 		android:text="@string/screen_filter_allow"/>
 
 </LinearLayout>
