--- a/briar-android/src/main/res/layout/list_item_blog_post.xml
+++ b/briar-android/src/main/res/layout/list_item_blog_post.xml
@@ -24,6 +24,7 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_alignParentLeft="true"
+				android:layout_alignParentStart="true"
 				android:layout_alignParentTop="true"
 				android:layout_marginBottom="@dimen/listitem_horizontal_margin"
 				android:layout_toLeftOf="@+id/commentView"
@@ -34,6 +35,7 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_alignParentLeft="true"
+				android:layout_alignParentStart="true"
 				android:layout_below="@+id/rebloggerView"
 				android:layout_marginBottom="@dimen/listitem_vertical_margin"
 				android:layout_toLeftOf="@+id/commentView"/>
@@ -42,6 +44,7 @@
 				android:id="@+id/commentView"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_alignParentEnd="true"
 				android:layout_alignParentRight="true"
 				android:layout_alignParentTop="true"
 				android:background="?attr/selectableItemBackground"
